--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             height: 100%;
             margin: 0;
             overflow: hidden;
-            background-color: var(--background-color);
+            background-color: transparent; /* Allow canvas to show through */
         }
         body {
             display: flex;
@@ -31,14 +31,19 @@
             min-height: 80px;
             padding: 0;
             background-color: var(--background-color);
+            position: relative;
+            z-index: 2; /* Above canvas */
         }
         #logo {
             max-height: 100%;
-            width: auto;
+            max-width: 20%; /* Constrain width */
+            height: auto;
             margin-left: 20px;
+            overflow: hidden; /* Prevent overflow */
         }
         @media (max-width: 768px) {
             #logo {
+                max-width: 40%; /* Adjust for mobile */
                 max-height: 60px;
             }
             #header {
@@ -69,7 +74,13 @@
         }
         #canvas-container {
             flex: 1;
-            position: relative;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1; /* Below header */
+            overflow: hidden;
         }
     </style>
 </head>
