--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     <div id="red-background"></div>
     
-    <audio id="wayfindersAudio" src="sammysmallseashanty.mp3" loop></audio>
+    <audio id="wayfindersAudio" src="https://raw.githubusercontent.com/IsidoreLands/wayfinders/main/sammysmallseashanty.mp3" loop></audio>
     
     <script>
         const audio = document.getElementById('wayfindersAudio');
@@ -139,5 +139,5 @@
         document.body.addEventListener('click', initialPlay, { once: true });
         audioControl.addEventListener('click', toggleAudio);
     </script>
-</head>
+</body>
 </html>
