Ensure OrbitControls.js is committed and referenced correctly

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             requestAnimationFrame(animate);
             galaxies.rotation.y += rotationSpeed;
             stars.rotation.y += rotationSpeed;
-            controls.update(); // Update controls
+            controls.update();
             renderer.render(scene, camera);
         }
         animate();
