--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Wayfinders | OODA WIKI</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&display=swap" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -57,44 +57,26 @@ width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" str
     <audio id="oceanAudio" src="https://raw.githubusercontent.com/IsidoreLands/wayfinders/main/oceanwaves.mp3" loop muted></audio>
 
     <script>
-        let scene, camera, renderer, starMaterial, ocean, clock, starfield, raycaster, mouse;
-        let shootingStars, skyCylinder; // --- MODIFIED: Renamed skySphere to skyCylinder
+        // --- MODIFIED: Removed starfield, only need sky backdrop and shooting stars ---
+        let scene, camera, renderer, ocean, clock, raycaster, mouse;
+        let shootingStars, skyBackdrop;
         let uiPlane, hiddenButton;
-
-        const vertexShader = `attribute float size; attribute vec3 customColor; varying vec3 vColor; void main() { vColor = customColor; vec4 mvPosition = modelViewMatrix * vec4(position, 1.0); gl_PointSize = size * (300.0 / -mvPosition.z); gl_Position = projectionMatrix * mvPosition; }`;
-        const fragmentShader = `uniform vec3 color; uniform sampler2D pointTexture; uniform float time; varying vec3 vColor; void main() { float intensity = sin(time * 2.0 + vColor.r * 100.0); float twinkle = 0.5 + 0.5 * intensity; gl_FragColor = vec4(vColor * color, twinkle); gl_FragColor = gl_FragColor * texture2D(pointTexture, gl_PointCoord); }`;
         
-        function createStarfield() {
-            const starGeometry = new THREE.BufferGeometry(), starCount = 30000, positions = [], colors = [], sizes = [];
-            const color = new THREE.Color(), radius = 4000;
-            for (let i = 0; i < starCount; i++) {
-                const x = (Math.random() - 0.5) * 2 * radius;
-                const y = Math.random() * radius; 
-                const z = (Math.random() - 0.5) * 2 * radius;
-                if (y < 10) continue;
-                if (Math.sqrt(x*x + y*y + z*z) > radius) continue;
-                positions.push(x, y, z);
-                color.setHSL(0.6, 0.1, 0.5 + Math.random() * 0.2);
-                colors.push(color.r, color.g, color.b);
-                sizes.push(Math.random() * 3 + 2);
-            }
-            starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(positions, 3));
-            starGeometry.setAttribute('customColor', new THREE.Float32BufferAttribute(colors, 3));
-            starGeometry.setAttribute('size', new THREE.Float32BufferAttribute(sizes, 1));
-            starMaterial = new THREE.ShaderMaterial({ uniforms: { color: { value: new THREE.Color(0xffffff) }, pointTexture: { value: new THREE.TextureLoader().load('https://raw.githubusercontent.com/IsidoreLands/wayfinders/main/star_particles.png') }, time: { value: 1.0 } }, vertexShader, fragmentShader, blending: THREE.AdditiveBlending, depthTest: false, transparent: true });
-            starfield = new THREE.Points(starGeometry, starMaterial);
-            scene.add(starfield);
-        }
+        // --- REMOVED: Procedural starfield functions are no longer needed ---
 
         function createShootingStars() {
             const starGeo = new THREE.BufferGeometry();
-            const starCount = 20;
+            const starCount = 30; // Increased count for more activity
             const positions = [];
             for (let i = 0; i < starCount; i++) {
-                positions.push( (Math.random() - 0.5) * 6000, 2000 + Math.random() * 3000, (Math.random() - 0.5) * 6000 );
+                positions.push(
+                    (Math.random() - 0.5) * 8000,
+                    2000 + Math.random() * 4000,
+                    (Math.random() - 0.5) * 8000
+                );
             }
             starGeo.setAttribute('position', new THREE.Float32BufferAttribute(positions, 3));
-            const starMat = new THREE.PointsMaterial({ color: 0x87CEEB, size: 15, blending: THREE.AdditiveBlending, transparent: true, opacity: 0.8 });
+            const starMat = new THREE.PointsMaterial({ color: 0xADD8E6, size: 20, blending: THREE.AdditiveBlending, transparent: true, opacity: 0.9 });
             shootingStars = new THREE.Points(starGeo, starMat);
             scene.add(shootingStars);
         }
@@ -142,44 +124,35 @@ width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" str
         function init() {
             clock = new THREE.Clock();
             scene = new THREE.Scene();
-            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 20000);
-            camera.position.set(0, 10, 0); // Position camera slightly above the water plane
-            renderer = new THREE.WebGLRenderer({ antialias: true });
+            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 30000);
+            camera.position.set(0, 10, 0);
+            renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
             renderer.setSize(window.innerWidth, window.innerHeight);
             renderer.domElement.id = 'skybox-canvas';
             document.body.insertBefore(renderer.domElement, document.body.firstChild);
 
+            // --- REBUILT: Create a curved panoramic backdrop screen ---
             const textureLoader = new THREE.TextureLoader();
-            textureLoader.load('https://cdn.eso.org/images/screen/eso0932a.jpg', function(loadedTexture) {
-                const canvas = document.createElement('canvas');
-                const ctx = canvas.getContext('2d');
-                canvas.width = loadedTexture.image.width;
-                canvas.height = loadedTexture.image.height * 2;
-                ctx.fillStyle = '#000000';
-                ctx.fillRect(0, 0, canvas.width, canvas.height);
-                ctx.drawImage(loadedTexture.image, 0, 0);
-                const paddedTexture = new THREE.CanvasTexture(canvas);
-                paddedTexture.needsUpdate = true;
-
-                // --- MODIFIED: Replaced Sphere with Cylinder for a true panoramic view ---
-                const skyGeo = new THREE.CylinderGeometry(10000, 10000, 4000, 64, 1, true);
-                const skyMat = new THREE.MeshBasicMaterial({ map: paddedTexture, side: THREE.BackSide });
-                skyCylinder = new THREE.Mesh(skyGeo, skyMat);
-                skyCylinder.position.y = 1000; // Move cylinder up so its base is near the horizon
-                scene.add(skyCylinde);
+            textureLoader.load('https://cdn.eso.org/images/screen/eso0932a.jpg', function(texture) {
+                // The backdrop is a segment of a cylinder, creating a curved screen
+                const backdropGeo = new THREE.CylinderGeometry(10000, 10000, 5000, 60, 1, true, 0, Math.PI * 1.5);
+                const backdropMat = new THREE.MeshBasicMaterial({ map: texture, side: THREE.BackSide, transparent: true, opacity: 0.9 });
+                skyBackdrop = new THREE.Mesh(backdropGeo, backdropMat);
+                skyBackdrop.position.y = 1200; // Position it high in the sky
+                skyBackdrop.rotation.y = Math.PI / 1.5; // Rotate to face the camera initially
+                scene.add(skyBackdrop);
             });
 
-            const waterGeometry = new THREE.PlaneGeometry(20000, 20000);
+            const waterGeometry = new THREE.PlaneGeometry(40000, 40000);
             ocean = new THREE.Water(waterGeometry, {
                 textureWidth: 512, textureHeight: 512,
                 waterNormals: new THREE.TextureLoader().load('https://threejs.org/examples/textures/waternormals.jpg', function(texture) { texture.wrapS = texture.wrapT = THREE.RepeatWrapping; }),
                 sunDirection: new THREE.Vector3(), sunColor: 0xffffff,
-                waterColor: 0x001e0f, distortionScale: 3.7,
+                waterColor: 0x001e0f, distortionScale: 3.7, fog: true
             });
             ocean.rotation.x = -Math.PI / 2;
             scene.add(ocean);
 
-            createStarfield();
             createShootingStars();
             createInteractive3DUI();
 
@@ -192,35 +165,33 @@ width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" str
             requestAnimationFrame(animate);
             const elapsedTime = clock.getElapsedTime();
 
-            // --- MODIFIED: Camera sways gently and looks up to push horizon down ---
-            camera.position.y = 10 + Math.sin(elapsedTime * 0.5) * 1;
-            camera.lookAt(0, 35, -100); // Higher lookAt target lowers the horizon line
+            // Camera looks up high, pushing the ocean horizon to the bottom third of the screen
+            camera.position.y = 15 + Math.sin(elapsedTime * 0.4) * 2;
+            camera.lookAt(0, 50, -100);
 
             if (uiPlane) {
-                uiPlane.position.set(0, 40, -120);
+                uiPlane.position.set(0, 55, -120);
                 uiPlane.lookAt(camera.position);
 
-                hiddenButton.position.set(6, 0, -120); // Position on the water plane (y=0)
+                hiddenButton.position.set(6, 0, -120);
             }
             
             if (shootingStars) {
                 shootingStars.geometry.attributes.position.array.forEach((_, i) => {
-                    if (i % 3 === 1) {
-                        shootingStars.geometry.attributes.position.array[i] -= 40;
+                    if (i % 3 === 1) { // y-coordinate
+                        shootingStars.geometry.attributes.position.array[i] -= 50;
                         if (shootingStars.geometry.attributes.position.array[i] < 0) {
-                            shootingStars.geometry.attributes.position.array[i] = 4000 + Math.random() * 3000;
+                            shootingStars.geometry.attributes.position.array[i] = 5000 + Math.random() * 3000;
                         }
                     }
                 });
                 shootingStars.geometry.attributes.position.needsUpdate = true;
             }
 
-            if (skyCylinder) {
-                skyCylinder.rotation.y -= 0.0001; // Slower rotation
+            if (skyBackdrop) {
+                skyBackdrop.rotation.y -= 0.0001; // Very slow, majestic rotation
             }
 
-            if (starfield) starfield.rotation.y = elapsedTime * 0.002;
-            if (starMaterial) starMaterial.uniforms['time'].value = elapsedTime;
             if (ocean) ocean.material.uniforms['time'].value += 1.0 / 60.0;
 
             renderer.render(scene, camera);
